Changed deprecated new Long to Long.valueOf